syntax = "proto3";
package email;

option go_package = "github.com/gonzabosio/transaction/services/proto/email";

service EmailService {
  rpc SendEmail(EmailRequest) returns (Result) {};
}

message EmailRequest {
  // string emailTo = 1;
  string subject = 1;
  string bodyText = 2;
}

message Result { string message = 1; }